<resources>
    <string name="app_name">invent</string>

    <string name="action_settings">Settings</string>

    <string name="category_overview">Overview</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="add_book_editor">New book</string>

    <string name="action_save">Save</string>

    <string name="hint_book_name">Name</string>

    <string name="hint_book_quantity">Quantity</string>

    <string name="hint_book_price">Price</string>

    <string name="hint_book_supplier">Supplier Name</string>

    <string name="hint_book_supplier_phone">Supplier phone</string>

    <string name="empty_view_title_text">no books to buy :(</string>

    <string name="empty_view_subtitle_text">add book</string>

    <string name="action_delete_all_entries">Delete All books</string>

    <string name="action_delete">Delete</string>

    <string name="price_not_valid">price not valid</string>

    <string name="new_book_add">Add a Book</string>

    <string name="edit_book_entry">Edit Book</string>

    <string name="successful_insert">Book saved</string>

    <string name="error_in_inset">Error with saving Book</string>

    <string name="successful_edit">Book updated</string>

    <string name="edit_failed">Error with updating book</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="edit_delete_success">book deleted</string>

    <string name="edit_deletion_failed">Error deleting Book</string>

    <string name="delete_dialog_msg">you want to delete this book?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>


    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_breed">Breed</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_weight">Weight</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_pet_weight">kg</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>

    <!-- Label for the pet's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="unknown_breed">Unknown breed</string>
</resources>