<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- price field -->
            <EditText
            android:id="@+id/edit_book_price"
            android:hint="@string/hint_book_price"
                android:inputType="number"
            style="@style/EditorFieldStyle" />
            <!-- quantity field -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrement"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="-" />
                <EditText
                    android:id="@+id/edit_book_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="wrap_content"
                    android:hint="@string/hint_book_quantity"
                    android:inputType="number" />

                <Button
                    android:id="@+id/increment"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="+" />

            </LinearLayout>

            <!-- supplier name field -->
            <EditText
                android:id="@+id/edit_book_supplier"
                android:hint="@string/hint_book_supplier"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
            <!-- supplier phone field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                android:hint="@string/hint_book_supplier_phone"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />

            <Button
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="contact supplier" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
